# archelab-v2

./: .gitignore  README.md  pyproject.toml  runner_arche_risk_core.py
archerisk_core/: agents.py  aggregate.py  archetypes.py  dataset_generate.py  defenses.py  env.py  episode_schema.py  metrics.py  plotting.py  runner.py  topologies.py  trace.py  utils.py
archerisk_core/tasks/: __init__.py  arithmetic.py  file_triage.py  policy_triage.py
data/: arche_risk_core_v3.jsonl
integrations/agentbeats_a2a/: README.md  server.py
paper_lncs/: llncs.cls  main.tex
paper_lncs/tables/: tab_asr_defended.tex  tab_uwr_topology.tex
paper_lncs_v1/: main.tex
paper_lncs_v1/paper_lncs_v2/: reviewer_mapping_v2_iter0.md
paper_lncs_v2/: README.md  acisp_references.bib  acisp_references_v2_additions.bib  main_iter1.tex  reviewer_mapping_v2_iter0.md  reviewer_mapping_v2_iter1.md
runs/: results.jsonl  summary.json
